knote/templates/knote.yml
apiVersion: v1
kind: Service
metadata:
  name: knote
  namespace: knote-app
  annotations:
    eks.amazonaws.com/role-arn: arn:aws:iam::312029113425:role/knote

spec:
  selector:
    app: knote
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer # Change to NodePort if LoadBalancer is not needed
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knote
  namespace: knote-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knote
  template:
    metadata:
      labels:
        app: knote
    spec:
      serviceAccountName: csi-store-driver-sa
      containers:
        - name: knote
          image: heder24/my-app:knote
          ports:
            - containerPort: 3000
          volumeMounts:
          - name: secrets-store-inline
            mountPath: "/mnt/secrets-store"
            readOnly: true
          imagePullPolicy: Always
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "aws-secret-credentials"
