knote/templates/ingress.yml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knote
  namespace: knote-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:312029113425:certificate/3c5ecd0f-ff3a-45d3-9237-abb9441ac0a8
    external-dns.alpha.kubernetes.io/hostname: www.hederdevops.com
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-2:312029113425:regional/webacl/knote-waf/2e9523ab-b60f-4f8a-9b39-42476a694829
    alb.ingress.kubernetes.io/actions.ssl-redirect: >-
        {
            "Type": "redirect",
            "RedirectConfig": {
                "Protocol": "HTTPS",
                "Port": "443",
                "Host": "#{host}",
                "Path": "/#{path}",
                "Query": "#{query}",
                "StatusCode": "HTTP_301"
            }
        }
spec:
  ingressClassName: alb
  rules:
    - host: www.hederdevops.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: knote
                port:
                  number: 80
    - host: hederdevops.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: knote
                port:
                  number: 80
